test/negative/betweenand03.cfr
// Test for negative between and constraint

a
 b ?
  c ?
  d ?
  e ?
  [c between d and  ]


